# cookiecutter-vertebral

./: LICENSE  README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/ci/: Dockerfile
{{cookiecutter.project_name}}/config/: config.yml
{{cookiecutter.project_name}}/core/: auth.py  main.py  middlewares.py  schemas.py  vertebral.py  websocktes.py
{{cookiecutter.project_name}}/core/catalogs/: response.py
{{cookiecutter.project_name}}/core/models/: auth.py  basemodel.py  mongodb.py
{{cookiecutter.project_name}}/tests/: test_geoserver.py  xxxxxxconftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __main__.py  routes.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/catalogs/: response.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/handlers/: monitor.py  status.py
