[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}}"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
motor = "^2.3.1"
pyyaml = "^5.3"
aiohttp-swagger3 = "^0.5.3"
aioreloader = "^0.4.0"
aiohttp_session = "^2.9.0"
cryptography = "^3.4.7"
# pyjwt = "^2.0.1"
jsonschema = "^3.2.0"
pytest-aiohttp = "^0.3.0"
requests = "^2.25.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
geoserver = "core.main:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
